tests/shell/fail/chainexit.ish
false || exit 5
echo unreached
